--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -19,4 +19,15 @@
             }
         }
     }
+
+    @include mq(tablet-wide) {
+        &__content {
+            padding: 0;
+            
+            p {
+                margin-left: 0 !important;
+                margin-right: 0 !important;
+            }
+        }
+    }
 }
